Assistant checkpoint: Fix timeline tags to be left-aligned within their boxes
Assistant generated file changes:
- src/index.css: Fix timeline tags alignment to be left-aligned inside their boxes

---

User prompt:

Hnn the professional and achivement Tags are right aligned now i think you didnt get the point fully please align them left inside the Box they are in to that they are at the keft eigentlich of the Box

--- a/src/index.css
+++ b/src/index.css
@@ -1975,11 +1975,13 @@ p {
   padding: 0.25rem 0.5rem;
   border-radius: 4px;
   margin-left: 0;
-  margin-right: 0;
+  margin-right: 0.5rem;
   font-weight: 500;
   display: inline-block;
   clear: both;
   border-radius: 0.25rem; /* Added border-radius */
+  float: left;
+  text-align: left;
 }
 
 /* For even items (right side) */
@@ -1987,13 +1989,15 @@ p {
   margin-left: 0;
   float: left;
   margin-bottom: 0.5rem;
+  text-align: left;
 }
 
 /* For odd items (left side) */
 .timeline-item:nth-child(odd) .timeline-tag {
-  margin-right: 0;
-  float: right;
+  margin-right: 0.5rem;
+  float: left;
   margin-bottom: 0.5rem;
+  text-align: left;
 }
 
 /* Clear the float for the title */
